fixing the vertical misalignment brought up in issue #185

--- a/css/custom.css
+++ b/css/custom.css
@@ -143,7 +143,7 @@
     letter-spacing: .2rem;
     margin-right: 35px;
     text-decoration: none;
-    line-height: 6.3rem;
+    line-height: 6.5rem;
     color: #222; }
   .navbar-link.active {
     color: #33C3F0; }
